@@ -16,6 +16,7 @@ Thanks!
 - Fix bug: next unread command didn't respect folder unexpanded state.
 - Fix bug: articles with date but no time were sometimes missed because of midnight timestamp.
 - Turn off article updating by default.
+- Speed up folder loading by only parsing visible summaries.
 
 2.1.0.2105
 ----------
